Adjust code and configs

--- a/configs/esrgan.yaml
+++ b/configs/esrgan.yaml
@@ -1,5 +1,5 @@
 # general setting
-batch_size: 16
+batch_size: 56
 input_size: 32
 gt_size: 128
 ch_size: 3
@@ -17,7 +17,7 @@ network_D:
 
 # dataset setting
 train_dataset:
-    path: './data/DIV2K800_sub_bin.tfrecord'
+    path: './data/full_dataset.tfrecord'
     num_samples: 32208
     using_bin: True
     using_flip: True
@@ -29,8 +29,8 @@ test_dataset:
 # training setting
 niter: 400000
 
-lr_G: !!float 1e-4
-lr_D: !!float 1e-4
+lr_G: 0.0001
+lr_D: 0.0001
 lr_steps: [50000, 100000, 200000, 300000]
 lr_rate: 0.5
 
@@ -39,13 +39,13 @@ adam_beta2_G: 0.99
 adam_beta1_D: 0.9
 adam_beta2_D: 0.99
 
-w_pixel: !!float 1e-2
+w_pixel: 0.01
 pixel_criterion: l1
 
 w_feature: 1.0
 feature_criterion: l1
 
-w_gan: !!float 5e-3
+w_gan: 0.001
 gan_type: ragan  # gan | ragan
 
 save_steps: 5000
