--- a/environment.yml
+++ b/environment.yml
@@ -6,9 +6,9 @@ dependencies:
   - python==3.7
   - pip
   - pip:
-    - tensorflow-gpu==2.1.0
     - numpy
     - opencv-python
-    - PyYAML
-    - tqdm
     - Pillow
+    - PyYAML
+    - tensorflow>=2.1.0
+    - tqdm
